syntax = "proto3";
package catalogservice;

service Catalog {
  rpc getCatalogList (Empty) returns (CatalogListResponse){}
  rpc getCatalogById (GetCatalogRequest) returns (CatalogResponse){}
  rpc createCatalog (CatalogRequest) returns (CatalogResponse){}
  rpc updateCatalog (CatalogRequest) returns (CatalogResponse){}
  rpc deleteCatalog (GetCatalogRequest) returns (CatalogResponse){}

  rpc getCatalogDetailList (MetaDataInfo) returns (CatalogDetailListResponse){}
  rpc createCatalogDetail (CatalogDetailRequest) returns (CatalogDetailResponse){}
  rpc updateCatalogDetail (CatalogDetailRequest) returns (CatalogDetailResponse){}
  rpc deleteCatalogDetail (GetCatalogRequest) returns (CatalogDetailResponse){}
}

message Empty{
}

message GetCatalogRequest{
  string id = 1;
}

message CatalogListResponse{
  repeated CatalogResponse catalogs = 1;
}

message CatalogResponse {
  string id = 1;
  string title = 2;
  string parent_catalog_id = 3;
}

message CatalogRequest{
  string id = 1;
  string title = 2;
  string parent_catalog_id = 3;
  bool active = 4;
}

message CatalogDetailListResponse{
  repeated CatalogDetailResponse catalog_details = 1;
}

message CatalogDetailResponse{
  string id = 1;
  string title = 2;
  string parent_catalog_detail_id = 3;
  string parent_catalog_detail_title =4;
  string catalog_id = 5;
  string catalog_title = 6;
}

message CatalogDetailRequest{
  string id = 1;
  string title = 2;
  string catalog_id = 3;
  string parent_catalog_detail_id = 4;
  bool active = 5;
}

message Filter{
  string filter_by = 1;
  string value = 2;
}

message Sort{
  string order_by = 1;
  string order = 2;
}

message MetaDataInfo{
  repeated Filter filters = 1;
  repeated Sort sorts = 2;
  string search_text = 3;
}
